--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "watch": "tsc -w",
     "start:dev": "tsc && node dist/src/index.js",
     "start": "node dist/src/index.js",
-    "start:prod": "npm run build && npm run start"
+    "start:prod": "npm run build && npm run start",
+    "lint": "eslint --ext ts src",
+    "lint:fix": "eslint --fix --ext ts src"
   },
   "repository": {
     "type": "git",
